4.7/adae28c59a6a71a971ffed713550911546df0e20
mfd: syscon: Include errno.h from header

The syscon header uses the ENOTSUPP error constant, but doesn't
include the header that defines it. This causes a build error
after the imx pinctrl driver started using syscon:

include/linux/mfd/syscon.h: In function 'syscon_node_to_regmap':
include/linux/mfd/syscon.h:32:18: error: 'ENOTSUPP' undeclared (first use in this function)
  return ERR_PTR(-ENOTSUPP);
                  ^~~~~~~~

This adds the missing #include.

Signed-off-by: Arnd Bergmann <arnd@arndb.de>
Fixes: 8626ada871f1 ("pinctrl: imx: attach iomuxc device to gpr syscon")
Signed-off-by: Lee Jones <lee.jones@linaro.org>

